fixed issue with select on IE and Firefox

--- a/src/assets/sass/material-dashboard/plugins/_select-bootstrap.scss
+++ b/src/assets/sass/material-dashboard/plugins/_select-bootstrap.scss
@@ -1,6 +1,3 @@
-.mat-form-field{
-    width: auto !important;
-}
 .mat-select{
     width: 100%;
 }
